[tool.poetry]
name = "kilopyte"
version = "0.1.0"
description = "Ultra small (1 KB or less minified and compressed) python libraries and applications."
authors = ["Ryan Freckleton <ryan.freckleton@gmail.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pyminifier = "^2.1"
black = "^20.8b1"
pylint = "^2.7.2"
Werkzeug = "^1.0.1"
splinter = "^0.14.0"
selenium = "^3.141.0"
mypy = "^0.812"
hypothesis = "^6.6.1"
coverage = "^5.5"

[tool.isort]
known_first_party = ['kilopyte' ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
